# shamirs

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-publish-sign-release.yml  lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: shamirs.rst
shamirs/: __init__.py  shamirs.py
src/shamirs/: __init__.py  shamirs.py
